# minimax-mcp

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-16-minimax-mcp.md
docs/superpowers/specs/: 2026-04-16-minimax-mcp-design.md
minimax_mcp/: __init__.py  server.py
tests/: test_server.py
