[project]
name = "minimax-mcp"
version = "0.1.0"
description = "MCP server that delegates code implementation to Minimax via Claude Code subprocess"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
minimax-mcp = "minimax_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
